* Started working on _chr

--- a/FileConverter/packages.config
+++ b/FileConverter/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="GlmNet" version="0.5.1.0" targetFramework="net452" />
   <package id="SharpZipLib.JetBrains.Stripped" version="0.87.20160802.0" targetFramework="net452" />
+  <package id="System.Numerics.Vectors" version="4.3.0" targetFramework="net452" />
 </packages>
