* Made some changes to display characters and to create a basic character (warrior, barbarian, hardcoded name) * Doesn't get past char select though.  Appears that network communication halts.  Not sure why yet.

--- a/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
+++ b/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
@@ -113,6 +113,8 @@
   <ItemGroup>
     <Compile Include="BasicCameraController.cs" />
     <Compile Include="Chat\ChatServer.cs" />
+    <Compile Include="Classes\ClassTypes.cs" />
+    <Compile Include="Classes\ClassTypesExtensions.cs" />
     <Compile Include="Configuration\OpenEQConfiguration.cs" />
     <Compile Include="DESCrypto.cs" />
     <Compile Include="Extensions.cs" />
