--- a/OpenEQ/OpenEQ.Game/packages.config
+++ b/OpenEQ/OpenEQ.Game/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="DotNetZip" version="1.10.1" targetFramework="net461" />
   <package id="GlmNet" version="0.5.1.0" targetFramework="net461" />
+  <package id="ImageSharp" version="1.0.0-alpha1-00054" targetFramework="net461" />
+  <package id="ImageSharp.Formats.Png" version="1.0.0-alpha1-00034" targetFramework="net461" />
+  <package id="ImageSharp.Processing" version="1.0.0-alpha1-00034" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="1.1.0" targetFramework="net461" />
@@ -14,7 +17,9 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Pfim" version="0.3.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
@@ -56,6 +61,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.0.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
