Initial commit of Godot port.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-.vscode
-.vs
-bin
-obj
 packages
 converter/eqdata/*
 !converter/eqdata/README.md
-s3data
 *.pyc
 *.zip
-OpenEQ.csproj.user
-imgui.ini
-*.user
+*.csproj.user
+.import
+.mono
+.vs
+mono
