Switched to controller/view structure.

--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,8 @@
   <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net45" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net461" />
+  <package id="PostSharp" version="5.0.37" targetFramework="net461" developmentDependency="true" />
+  <package id="PostSharp.Redist" version="5.0.37" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net45" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
