--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <PackageReference Include="OpenTK.NETCore" Version="1.1.2749.6433" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NsimGui\NsimGui.csproj" />
+  </ItemGroup>
 </Project>
