--- a/NsimGui/NsimGui.csproj
+++ b/NsimGui/NsimGui.csproj
@@ -4,8 +4,10 @@
     <AssemblyName>OpenEQ.NsimGui</AssemblyName>
     <RootNamespace>OpenEQ.NsimGui</RootNamespace>
     <LangVersion>7.2</LangVersion>
-    <Platform>x64</Platform>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DebugType>full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="0.4.6" />
