Continued work on legacy file reader.  Split common component off.

--- a/ConverterApp/ConverterApp.csproj
+++ b/ConverterApp/ConverterApp.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>OpenEQ.ConverterApp</AssemblyName>
+    <RootNamespace>OpenEQ.ConverterApp</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\LegacyFileReader\LegacyFileReader.csproj" />
