--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="OpenTK" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\NsimGui\NsimGui.csproj" />
   </ItemGroup>
 </Project>
