--- a/LegacyFileReader/LegacyFileReader.csproj
+++ b/LegacyFileReader/LegacyFileReader.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>OpenEQ.LegacyFileReader</AssemblyName>
+    <RootNamespace>OpenEQ.LegacyFileReader</RootNamespace>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
 </Project>
