--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -6,7 +6,7 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="morelinq" Version="3.0.0-beta-2" />
+    <PackageReference Include="morelinq" Version="3.0.0" />
     <PackageReference Include="OpenTK" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup>
