Initial image lib.

--- a/ConverterCore/ConverterCore.csproj
+++ b/ConverterCore/ConverterCore.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\ImageLib\ImageLib.csproj" />
     <ProjectReference Include="..\LegacyFileReader\LegacyFileReader.csproj" />
   </ItemGroup>
   <ItemGroup>
