--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="morelinq" Version="3.0.0" />
-    <PackageReference Include="OpenTK" Version="3.0.0" />
+    <PackageReference Include="OpenTK.NETCore" Version="1.1.2749.6433" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
