--- a/NsimGui/NsimGui.csproj
+++ b/NsimGui/NsimGui.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="0.4.6" />
     <PackageReference Include="IronPython" Version="2.7.8.1" />
+    <PackageReference Include="morelinq" Version="3.0.0" />
   </ItemGroup>
 </Project>
