--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -19,5 +19,6 @@
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\ImageLib\ImageLib.csproj" />
     <ProjectReference Include="..\NsimGui\NsimGui.csproj" />
+    <ProjectReference Include="..\Physics\Physics.csproj" />
   </ItemGroup>
 </Project>
