Added collision detection, moving across surfaces, etc.

--- a/CollisionManager/CollisionManager.csproj
+++ b/CollisionManager/CollisionManager.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
 </Project>
