--- a/Netcode/Netcode.csproj
+++ b/Netcode/Netcode.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>OpenEQ.Netcode</AssemblyName>
     <RootNamespace>OpenEQ.Netcode</RootNamespace>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Ionic.Zlib" Version="1.9.1.5" />
+    <ProjectReference Include="..\Zlib.Portable\Zlib.Portable.csproj" />
   </ItemGroup>
 </Project>
