--- a/OpenEQ/OpenEQ.csproj
+++ b/OpenEQ/OpenEQ.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.2</LangVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="IronPython" Version="2.7.10-alpha0" />
+    <PackageReference Include="PrettyPrinter" Version="1.0.0" />
   </ItemGroup>
 </Project>
