--- a/ConverterCore/ConverterCore.csproj
+++ b/ConverterCore/ConverterCore.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <AssemblyName>OpenEQ.ConverterCore</AssemblyName>
     <RootNamespace>OpenEQ.ConverterCore</RootNamespace>
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\LegacyFileReader\LegacyFileReader.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DotNetZip" Version="1.16.0" />
     <PackageReference Include="morelinq" Version="3.1.0" />
   </ItemGroup>
 </Project>
