added updated test and test invocation was added to build script

--- a/.github/workflows/build-openeq-client.yml
+++ b/.github/workflows/build-openeq-client.yml
@@ -10,7 +10,7 @@ on:
     tags-ignore:
       - '*'
 
-  # Allows you to run this workflow manually from the Actions tab
+# Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -26,3 +26,5 @@ jobs:
         run: nuget restore OpenEQ.sln
       - name: Build solution
         run: dotnet build OpenEQ.sln
+      - name: Test solution
+        run: dotnet test
